# lif-core

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MIGRATION.md  README.md  cspell.json  demo.aws  dev.aws  pyproject.toml  release-demo-frontend.sh  release-demo.sh
.github/: pull_request_template.md
.github/workflows/: demo_lif_mdr_frontend.yml  lif_advisor_app.yml  lif_mdr_frontend.yml
cloudformation/: README.md  cf-env-check.bb  cf-env-check.py  cognito-selfserve.yml  demo-lif-advisor-api.params  demo-lif-advisor-app.params  demo-lif-dagster-code-location.params  demo-lif-dagster-daemon.params  demo-lif-dagster-webserver.params  demo-lif-example-data-source-rest-api.params  demo-lif-graphql-org1.params  demo-lif-graphql-org2.params  demo-lif-graphql-org3.params  demo-lif-graphql.params  demo-lif-identity-mapper-mariadb-org1.params  demo-lif-identity-mapper-mariadb-org2.params  demo-lif-identity-mapper-mariadb-org3.params  demo-lif-identity-mapper-org1.params  demo-lif-identity-mapper-org2.params  demo-lif-identity-mapper-org3.params  demo-lif-learner-data-export-api.params  demo-lif-mdr-api.params  demo-lif-mdr-cognito.params  demo-lif-mongodb-org1.params  demo-lif-mongodb-org2.params  demo-lif-mongodb-org3.params  demo-lif-mongodb-seed.params  demo-lif-mongodb.params  demo-lif-orchestrator.params  demo-lif-query-cache-org1.params  demo-lif-query-cache-org2.params  demo-lif-query-cache-org3.params  demo-lif-query-cache.params  demo-lif-query-planner-org1.params  demo-lif-query-planner-org2.params  demo-lif-query-planner-org3.params  demo-lif-query-planner.params  demo-lif-repositories.params  demo-lif-semantic-search.params  demo-lif-translator-org1.params  (+11 more)
deployments/: README.md
deployments/advisor-demo-docker/: docker-compose.yml
docs/: COMMITTERS.md  INDEX.md  LIF_Component_Design_Document-MDR.md  LIF_Component_Design_Document-Query_Planner.md  README.md  lif_services_overview.md  mdr-overview.md
docs/agents/: README.md
docs/design/: README.md
docs/guides/: LIF_Add_Data_Source.md  (+2 more)
e2e/: README.md
integration_tests/: README.md  conftest.py  test_01_mongodb.py  test_02_query_cache.py  test_03_query_planner.py  test_04_graphql.py  test_05_cross_org.py  test_06_semantic_search.py
projects/: README.md
projects/lif_learner_data_export_api/: README.md  pyproject.toml
sam/: README.md  deploy-sam.sh
scripts/: README.md  export-cognito-registrations.py  export_cognito_registrations.py  fix_sample_data_schema.py  generate_sample_users.py  import_transformation_group.py  provision-mdr-tenant.sh  release-demo-frontend.sh  release-demo.sh  reverse_transformation_group.py  setup-api-keys.sh  setup-demo-user-password.sh  setup-graphql-api-keys.sh  setup-mdr-api-keys.sh  sync-query-planner-config.sh  verify-demo-images.sh
(+292 files in other folders)
