[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "lif_learner_data_export_api"
version = "0.1.0"

requires-python = ">=3.13,<3.14"

# sqlalchemy and sqlmodel are required due to a file import for DataModelType.
# Ticket to refactor so these two dependencies can be removed from LDE:  

dependencies = [
    "httpx~=0.28",
    "fastapi~=0.115",
    "pyjwt~=2.10",
    "pydantic-settings~=2.1",
    "sqlalchemy~=2.0",
    "sqlmodel~=0.0",
    "uvicorn~=0.34",
]

# This section is needed for the Hatchling build backend, to activate the polylith build hook.
[tool.hatch.build.hooks.polylith-bricks]

# This section is needed for building
[tool.hatch.build.targets.wheel]
packages = ["lif"]

[tool.polylith.bricks]
"../../bases/lif/learner_data_export_api" = "lif/learner_data_export_api"
"../../components/lif/exceptions" = "lif/exceptions"
"../../components/lif/logging" = "lif/logging"
"../../components/lif/datatypes" = "lif/datatypes"
"../../components/lif/mdr_utils" = "lif/mdr_utils"
"../../components/lif/mdr_auth" = "lif/mdr_auth"
"../../components/lif/mdr_dto" = "lif/mdr_dto"
"../../components/lif/mdr_services" = "lif/mdr_services"
"../../components/lif/lif_schema_config" = "lif/lif_schema_config"
"../../components/lif/mdr_client" = "lif/mdr_client"
"../../components/lif/query_planner_client" = "lif/query_planner_client"
"../../components/lif/translator_client" = "lif/translator_client"
"../../components/lif/tenant_routing" = "lif/tenant_routing"
